upgrade to engine.io-client version 0.8.4.2 and release 0.8.4.2